# cellcharter

./: .cruft.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  .readthedocs.yaml.rej  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml  test.yaml.rej
docs/: api.md  conf.py  conf.py.rej  contributing.md  developer_docs.md  graph.md  index.md  index.md.rej  plotting.md  template_usage.md  tools.md
docs/notebooks/: example.ipynb
docs/notebooks/tutorial_models/codex_mouse_spleen_trvae/: attr.pkl  model_params.pt  var_names.csv
src/cellcharter/: __init__.py  _utils.py
src/cellcharter/_constants/: _pkg_constants.py
src/cellcharter/datasets/: __init__.py  _dataset.py
src/cellcharter/gr/: __init__.py  _aggr.py  _build.py  _cluster.py  _group.py  _nhood.py  _utils.py
src/cellcharter/pl/: __init__.py  _autok.py  _cluster.py  _group.py  _nhood.py  _shape.py  _utils.py  basic.py
src/cellcharter/pp/: basic.py
src/cellcharter/tl/: __init__.py  _autok.py  _gmm.py  _shape.py  _trvae.py  _utils.py
tests/: conftest.py  test_basic.py
tests/_data/: codex_adata.h5ad
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k1/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k10/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k11/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k12/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k13/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k14/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k15/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k16/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k2/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k3/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k4/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k5/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k6/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k7/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k8/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_imc/best_models/GaussianMixture_k9/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k1/: attributes.pickle  params.json  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k10/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k11/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k12/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k13/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k14/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k15/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k16/: attributes.pickle  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k2/: attributes.pickle  params.json  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k3/: attributes.pickle  params.json  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k4/: attributes.pickle  params.json  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k5/: attributes.pickle  params.json  params.pickle
tests/_models/cellcharter_autok_mibitof/best_models/GaussianMixture_k6/: attributes.pickle  params.json  params.pickle
tests/graph/: test_aggregate_neighbors.py  test_build.py  test_cluster.py  test_diff_nhood.py  test_group.py  test_nhood.py  test_remove_long_links.py  test_spatial_neighbors.py
tests/plotting/: test_autok.py  test_cluster.py  test_group.py  test_plot_nhood.py  test_plot_stability.py  test_shape.py
tests/tools/: test_autok.py  test_gmm.py  test_shape.py
(+70 files in other folders)
