[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "cellcharter"
version = "0.1.1"
description = "A Python package for the identification, characterization and comparison of spatial clusters from spatial -omics data."
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "CSO group"},
]
maintainers = [
    {name = "Marco Varrone", email = "marco.varrone@unil.ch"},
]
urls.Documentation = "https://cellcharter.readthedocs.io/"
urls.Source = "https://github.com/CSOgroup/cellcharter"
urls.Home-page = "https://github.com/CSOgroup/cellcharter"
dependencies = [
    "anndata",
    "scikit-learn",
    "squidpy",
    # for debug logging (referenced from the issue template)
    "session-info",
    "pycave",
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit",
    "twine>=4.0.2"
]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]
transcriptomics = [
    "scvi-tools",
]
proteomics = [
    "scarches",
]

[tool.coverage.run]
source = ["cellcharter"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
    "ignore::anndata.OldFormatWarning",
    "ignore:.*this fit will run with no optimizer.*",
    "ignore:.*Consider increasing the value of the `num_workers` argument.*",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
